# glusterd-operator

./: Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: main.rs  node.rs  operator.rs  storage.rs  utils.rs
src/yaml/: crd.yaml  glusterd-deployment.yaml.j2  glusterd-service.yaml.j2  test.yaml
