[package]
name = "glusterd-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "derive", "ws"] }
kube-derive = "0.87.1"
log = "0.4.20"
minijinja = "1.0.10"
regex = "1.10.2"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
simplelog = "0.12.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
